# courseWork

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  test_space.cpp  vcpkg.json
docs/: РУКОВОДСТВО.md
include/visionCore/app/: BatchRunner.hpp  OutputOptions.hpp
include/visionCore/core/: Image.hpp
include/visionCore/domain/: BoundingBox.hpp  Classification.hpp  Detection.hpp  FeatureVector.hpp  Shape.hpp  ShapeKind.hpp
include/visionCore/domain/shapes/: Circle.hpp  Hexagon.hpp  Rectangle.hpp  Square.hpp  Triangle.hpp
include/visionCore/gui/: GuiApp.hpp  NativeDialogs.hpp
include/visionCore/infra/: AppConfig.hpp  ConsoleUtf8.hpp  Logger.hpp
include/visionCore/io/: FileWalker.hpp  ImageIO.hpp  PathUtils.hpp
include/visionCore/pipeline/: IAnnotator.hpp  IClassifier.hpp  IDetector.hpp  IFeatureExtractor.hpp  INoiseFilter.hpp  Pipeline.hpp  PipelineFactory.hpp  PipelineResult.hpp
include/visionCore/pipeline/impl/: ContourFeatureExtractor.hpp  GaussianMedianFilter.hpp  OpenCvAnnotator.hpp  ShapeClassifier.hpp  ThresholdContourDetector.hpp
include/visionCore/tools/: SampleImageGenerator.hpp
scripts/: build.sh  build_msvc.bat  gen_samples.bat  run_samples.bat
src/: main.cpp
src/app/: BatchRunner.cpp
src/core/: Image.cpp
src/domain/: Classification.cpp  ShapeKind.cpp
src/domain/shapes/: Circle.cpp  Hexagon.cpp  Rectangle.cpp  ShapeMatchUtils.hpp  Square.cpp  Triangle.cpp
src/gui/: GuiApp.cpp  NativeDialogsWin32.cpp
src/infra/: Logger.cpp
src/io/: FileWalker.cpp  ImageIO.cpp  PathUtils.cpp
src/pipeline/: Pipeline.cpp  PipelineFactory.cpp
src/pipeline/impl/: ContourFeatureExtractor.cpp  GaussianMedianFilter.cpp  OpenCvAnnotator.cpp  ShapeClassifier.cpp  ThresholdContourDetector.cpp
src/tools/: SampleImageGenerator.cpp
